<resources>
    <string name="app_name">ProyectoBADT2_DanielFernandez</string>
    <string name="btn_filtro">Filtro</string>
    <string name="btn_consultar">Consultar</string>
    <string name="tv_filtro">Filtro Seleccionado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filtro">Opciones de Filtro</string>
    <string name="tv_mes">Mes elegido</string>
    <string name="tv_año">Año Elegido</string>
    <string name="et_año">Año</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="tv_pais">Pais Elegido</string>
    <string name="et_pais">Pais</string>
</resources>