<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin"
    tools:context=".MainActivity"
    android:background="@color/green">



    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/btnFiltro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_filtro"
            android:backgroundTint="@color/white"
            android:textColor="@color/green"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tvFiltro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_filtro"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            android:padding="@dimen/margin"/>

        <Button
            android:id="@+id/btnConsultar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_consultar"
            android:backgroundTint="@color/white"
            android:textColor="@color/green"
            android:textStyle="bold"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvConsulta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ll1"

        />




</androidx.constraintlayout.widget.ConstraintLayout>