<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin"
    xmlns:app="http://schemas.android.com/apk/res-auto">





    <TextView
        android:id="@+id/tvMes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_mes"
        android:textSize="@dimen/filtro"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <CheckBox
        android:id="@+id/chkMes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvMes"
        app:layout_constraintStart_toStartOf="parent"/>
    
    <Spinner
        android:id="@+id/spnMes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/meses"
        app:layout_constraintTop_toTopOf="@id/chkMes"
        app:layout_constraintStart_toEndOf="@id/chkMes"
        app:layout_constraintBottom_toBottomOf="@id/chkMes"
        />

    <TextView
        android:id="@+id/tvAño"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_año"
        android:textSize="@dimen/filtro"
        app:layout_constraintTop_toBottomOf="@+id/chkMes"
        />

    <CheckBox
        android:id="@+id/chkAno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvAño"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/etAno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/et_año"
        android:maxLength="4"
        app:layout_constraintTop_toTopOf="@id/chkAno"
        app:layout_constraintStart_toEndOf="@id/chkAno"
        app:layout_constraintBottom_toBottomOf="@id/chkAno"
        />

    <TextView
        android:id="@+id/tvPais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_pais"
        android:textSize="@dimen/filtro"
        app:layout_constraintTop_toBottomOf="@+id/chkAno"/>

    <CheckBox
        android:id="@+id/chkPais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvPais"
        app:layout_constraintStart_toStartOf="parent"/>

    <Spinner
        android:id="@+id/spnPais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        app:layout_constraintTop_toTopOf="@id/chkPais"
        app:layout_constraintStart_toEndOf="@id/chkPais"
        app:layout_constraintBottom_toBottomOf="@id/chkPais"
        />



</androidx.constraintlayout.widget.ConstraintLayout>